src/parser/snapshots/monkey_language_server__parser__test__return_unhappy_2.snap
---
source: src/parser/test.rs
description: "return ];"
expression: result
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Err(
                Err(UnexpectedToken("SyntaxError: Unexpected ']'."), (0,7)->(0,8)),
            ),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 9,
            },
        },
    },
]

===================================

return ];
       ^ [Error] SyntaxError: Unexpected ']'.
